--- a/style/scss/second_scss/sec_footer.scss
+++ b/style/scss/second_scss/sec_footer.scss
@@ -38,14 +38,14 @@
     }
 }
 
-.footer-text, .footer-text-none {
+.footer-text, .footer-text-mini {
     font-size: 16px;
     line-height: 20px;
     text-align: right;
     color: #B3B3BA;
 }
 
-.footer-text-none {
+.footer-mini {
     display: none;
 }
 
@@ -93,7 +93,32 @@
 }
 
 
-@media (max-width: 680px) {
+@media (max-width: 768px) {
+
+    .footer-big {
+        display: none;
+    }
+
+    .footer-mini {
+    display: flex;
+    flex-direction: column;
+    width: 398px;
+    margin: 0 auto;
+
+        .footer-adress {
+            padding-bottom: 21px;
+        }
+
+        .footer-text-mini {
+            text-align: center;
+            padding-top: 30px;
+        }
+    }
+}
+
+
+@media (max-width: 535px) {
+
 
     .footer {
         width: auto;
@@ -105,26 +130,16 @@
     .none {
         display: none;
     }
-    .footer-info {
-        justify-content: center;
-    }
 
     .footer-adress, .footer-contact {
         flex-direction: column;
         height: auto;
-    }
-
-    .footer-text-none {
-        display: block;
-        text-align: center;
+        justify-content: center;
+        align-self: center;
     }
 
     .adress, .footer-facebook, .footer-tel {
         margin-bottom: 10px;
-    }
-
-    .footer-email {
-        margin-bottom: 30px;
     }
 }
 
